[add] retiring Domi [fix] Markdown

--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -28,4 +28,6 @@ notes:
   - name: Multibox Loki Other
     description: >
       This fit is only for multibox specialist
-  
+  - name: Alt Dominix Other
+    description: >
+      This fit is getting retired, end of life planned for march 2024. 
