--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,9 +5,9 @@ RUN npm i
 # ADD archive-frontend.tar /app/frontend
 ADD src /app/frontend/src
 ADD public/ /app/frontend/public
-# RUN npm run build
-ENTRYPOINT ["npm"]
-CMD ["start"]
-# FROM nginx:alpine
-# ADD nginx.conf /etc/nginx/conf.d/default.conf
-# COPY --from=build /app/frontend/build /usr/share/nginx/html
+RUN npm run build
+# ENTRYPOINT ["npm"]
+# CMD ["start"]
+FROM nginx:alpine
+ADD nginx.conf /etc/nginx/conf.d/default.conf
+COPY --from=build /app/frontend/build /usr/share/nginx/html
