[fix] multiple cat

--- a/backend/data/categories.yaml
+++ b/backend/data/categories.yaml
@@ -45,6 +45,8 @@ rules:
   - item: Eos
     category: links
   - item: Damnation
-    category: links
+    category: alt
   - item: Ishtar
     category: ishtar
+  - item: Rattlesnake
+    category: alt
