--- a/backend/data/skills.yaml
+++ b/backend/data/skills.yaml
@@ -665,6 +665,52 @@ requirements:
     Cybernetics:
       min: 4
 
+  Oneiros:
+    <<: [*logistics]
+    EM Armor Compensation:
+      min: 2
+      elite: 4
+      gold: 5
+    Explosive Armor Compensation:
+      min: 2
+      elite: 4
+      gold: 5
+    Thermal Armor Compensation:
+      min: 2
+      elite: 4
+      gold: 5
+    Kinetic Armor Compensation:
+      min: 2
+      elite: 4
+      gold: 5
+    Afterburner:
+      min: 4
+    Evasive Maneuvering:
+      min: 3
+    Fuel Conservation:
+      min: 4
+    Logistics Cruisers:
+      min: 4
+      gold: 5
+    Magnetometric Sensor Compensation:
+      elite: 4
+    Gallente Cruiser:
+      min: 5
+    Medium Drone Operation:
+      min: 1
+      elite: 5
+    CPU Management:
+      min: 5
+    Power Grid Management:
+      min: 5
+    Energy Grid Upgrades:
+      min: 4
+    Cybernetics:
+      min: 3
+    Capacitor Systems Operation:
+      min: 4
+      elite: 5
+
   Nestor:
     <<: [*logistics, *rigging]
     Amarr Battleship:
