[del] domi note [add] oneiros note

--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -28,6 +28,7 @@ notes:
   - name: Multibox Loki Other
     description: >
       This fit is only for multibox specialist
-  - name: Alt Dominix Other
+  - name: Starter SCS Oneiros
     description: >
-      This fit is getting retired, end of life planned for march 2024. 
+      This fit requires the RA-704, FC-804, EO-604 Implants
+
