--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -6,7 +6,7 @@ notes:
 
   - name: Starter
     description: >
-      These **DPS** ships are the only ones you can fly with all **Armor Compensation** skills at level 2, all others require at least 4. **Replace Tracking Computer II** with the **Micro Jump drive** when able.
+      These **ships** are the only ones you can fly with all **Armor Compensation** skills at level 2, all others require at least 4. **Replace Tracking Computer II** with the **Micro Jump drive** when able.
   - name: Support
     description: >
       These fits are to be used for alts. Exception can be made for the command ship.
