--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -7,9 +7,15 @@ notes:
   - name: Starter
     description: >
       These **ships** are the only ones you can fly with all **Armor Compensation** skills at level 2, all others require at least 4. **Replace Tracking Computer II** with the **Micro Jump drive** when able.
-  - name: Support
+  - name: Other
     description: >
-      These fits are to be used for alts. Exception can be made for the command ship.
+      These fits are to be used for alts and never used as main characters in fleet. Only 1 damnation on grid per fleet.
+  - name: Optimal
+    description: >
+      All Optimal DPS ships are required to have the Amulet set 1-6, hardwiring are not required but highly recommended, the Nestor does not require the amulet set.
+  - name: VG
+    description: >
+      These refits are not mandatory, you can do VG's in the normal fit, but are highly recommended if you regularly do VG sites.
 
   # Ship specific notes
 
