[fix] Astral call me honey so i have to do some commit and phrasing is now improved ╰(*°▽°*)╯╰(*°▽°*)╯

--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -6,7 +6,7 @@ notes:
 
   - name: Starter
     description: >
-      These **ships** are the only ones you can fly with all **Armor Compensation** skills at level 2, all others require at least 4. **Replace Tracking Computer II** with the **Micro Jump drive** when able.
+      These **ships** are the only ones you can fly with all **Armor Compensation** skills at level 2, all others require at least 4. If you have omega replace **tracking computer II** with **micro jump drive**.
   - name: Other
     description: >
       These fits are to be used for alts and never used as main characters in fleet. Only 1 damnation on grid per fleet.
