--- a/backend/data/skills.yaml
+++ b/backend/data/skills.yaml
@@ -6,6 +6,10 @@ categories:
     - Explosive Armor Compensation
     - Thermal Armor Compensation
     - Kinetic Armor Compensation
+    - EM Shield Compensation
+    - Explosive Shield Compensation
+    - Thermal Shield Compensation
+    - Kinetic Shield Compensation
     - Hull Upgrades
     - Mechanics
     - Shield Management
@@ -100,6 +104,7 @@ categories:
     - Gallente Battlecruiser
     - Amarr Cruiser
     - Gallente Cruiser
+    - Caldari Cruiser
     - Logistics Cruisers
     - Marauders
     - Command Ships
@@ -346,12 +351,6 @@ requirements:
     Target Navigation Prediction:
       min: 3
       elite: 4
-    Torpedoes:
-      min: 3
-      elite: 4
-      gold: 5
-    Torpedo Specialization:
-      gold: 5
     Warhead Upgrades:
       min: 3
       elite: 4
@@ -722,6 +721,47 @@ requirements:
       min: 4
       elite: 5
 
+  Basilisk:
+    <<: [*logistics]
+    Afterburner:
+      min: 4
+    Evasive Maneuvering:
+      min: 3
+    Fuel Conservation:
+      min: 4
+    Logistics Cruisers:
+      min: 4
+      gold: 5
+    Magnetometric Sensor Compensation:
+      elite: 4
+    Gallente Cruiser:
+      min: 5
+    Medium Drone Operation:
+      min: 1
+      elite: 5
+    CPU Management:
+      min: 5
+    Power Grid Management:
+      min: 5
+    Energy Grid Upgrades:
+      min: 4
+    Cybernetics:
+      min: 3
+    Capacitor Systems Operation:
+      min: 4
+      elite: 5
+    Target Management:
+      min: 4
+      elite: 5
+    Advanced Target Management:
+      elite: 3
+    Long Range Targeting:
+      min: 4
+      elite: 5
+    Signature Analysis:
+      min: 4
+      elite: 5
+
   Nestor:
     <<: [*logistics, *rigging]
     Amarr Battleship:
@@ -834,26 +874,42 @@ requirements:
       gold: 5
     Caldari Battleship:
       min: 3
-    EM Armor Compensation:
-      min: 4
-      gold: 5
-    Explosive Armor Compensation:
-      min: 4
-      gold: 5
-    Thermal Armor Compensation:
-      min: 4
-      gold: 5
-    Kinetic Armor Compensation:
-      min: 4
-      gold: 5
-  Dominix:
-    <<: [*generic]
-    Gallente Drone Specialization: 
-      gold: 5
-    Gallente Battleship:
+    Torpedoes:
       min: 3
       elite: 4
       gold: 5
-    Heavy Drone Operation:
+    Torpedo Specialization:
+      gold: 5
+
+  Gila:
+    <<: [*generic, *missile]
+    Afterburner:
+      min: 4
+    Gallente Drone Specialization: 
+      gold: 5
+    Medium Drone Operation:
       min: 4
       elite: 5
+    Gallente Cruiser:
+      min: 3
+      elite: 4
+      gold: 5
+    Caldari Cruiser:
+      min: 4
+      gold: 5
+    EM Shield Compensation:
+      min: 4
+      gold: 5
+    Explosive Shield Compensation:
+      min: 4
+      gold: 5
+    Thermal Shield Compensation:
+      min: 4
+      gold: 5
+    Kinetic Shield Compensation:
+      min: 4
+      gold: 5
+    Light Missiles:
+      min: 3
+      elite: 4
+      gold: 5
