--- a/backend/data/skills.yaml
+++ b/backend/data/skills.yaml
@@ -14,6 +14,7 @@ categories:
     - Mechanics
     - Shield Management
     - Shield Operation
+    - Tactical Shield Manipulation
   Gunnery:
     - Controlled Bursts
     - Motion Prediction
@@ -143,6 +144,87 @@ requirements:
     Mechanics:
       min: 4
       elite: 5
+    Acceleration Control:
+      min: 3
+      elite: 4
+    Evasive Maneuvering:
+      min: 3
+      elite: 4
+    High Speed Maneuvering:
+      min: 3
+      elite: 4
+    Warp Drive Operation:
+      min: 3
+      elite: 5
+    Navigation:
+      min: 4
+      elite: 5
+    Drones:
+      min: 5
+    Gallente Drone Specialization:
+      elite: 4
+    Drone Durability:
+      min: 3
+      elite: 4
+    Drone Navigation:
+      min: 3
+      elite: 4
+    Drone Avionics:
+      min: 3
+      elite: 4
+    Advanced Drone Avionics:
+      elite: 4
+    Drone Interfacing:
+      min: 3
+      elite: 4
+    Drone Sharpshooting:
+      min: 3
+      elite: 4
+    Electronic Warfare:
+      elite: 4
+      gold: 4
+    Thermodynamics:
+      min: 3
+      elite: 4
+    Capacitor Management:
+      min: 4
+      elite: 5
+    CPU Management:
+      min: 4
+      elite: 5
+    Capacitor Systems Operation:
+      min: 3
+      elite: 5
+    Power Grid Management:
+      elite: 5
+    Spaceship Command:
+      elite: 5
+    Nanite Interfacing:
+      elite: 4
+    Nanite Operation:
+      elite: 4
+    Target Management:
+      min: 4
+      elite: 5
+    Long Range Targeting:
+      min: 3
+      elite: 5
+    Signature Analysis:
+      min: 3
+      elite: 5
+    Biology:
+      min: 3
+      elite: 5
+    Cybernetics:
+      min: 2
+      elite: 5
+      priority: 5
+    Shield Management:
+      elite: 4
+    Shield Operation:
+      elite: 4
+
+  _generic_no_armor: &generic_no_armor # Generic skills: everyone needs these
     Acceleration Control:
       min: 3
       elite: 4
@@ -722,7 +804,7 @@ requirements:
       elite: 5
 
   Basilisk:
-    <<: [*logistics]
+    <<: [*generic_no_armor, *logistics]
     Afterburner:
       min: 4
     Evasive Maneuvering:
@@ -745,6 +827,11 @@ requirements:
     Capacitor Systems Operation:
       min: 4
       elite: 5
+    Shield Emission Systems:
+      min: 4
+      elite: 5
+    Tactical Shield Manipulation:
+      min: 4
     Target Management:
       min: 4
       elite: 5
@@ -756,18 +843,6 @@ requirements:
     Signature Analysis:
       min: 4
       elite: 5
-    EM Shield Compensation:
-      min: 4
-      gold: 5
-    Explosive Shield Compensation:
-      min: 4
-      gold: 5
-    Thermal Shield Compensation:
-      min: 4
-      gold: 5
-    Kinetic Shield Compensation:
-      min: 4
-      gold: 5
 
   Nestor:
     <<: [*logistics, *rigging]
@@ -889,7 +964,7 @@ requirements:
       gold: 5
 
   Gila:
-    <<: [*generic, *missile]
+    <<: [*generic_no_armor, *missile]
     Afterburner:
       min: 4
     Gallente Drone Specialization: 
@@ -904,19 +979,11 @@ requirements:
     Caldari Cruiser:
       min: 4
       gold: 5
-    EM Shield Compensation:
-      min: 4
-      gold: 5
-    Explosive Shield Compensation:
-      min: 4
-      gold: 5
-    Thermal Shield Compensation:
-      min: 4
-      gold: 5
-    Kinetic Shield Compensation:
-      min: 4
-      gold: 5
     Light Missiles:
       min: 3
       elite: 4
       gold: 5
+    Tactical Shield Manipulation:
+      min: 4
+    Drone Interfacing:
+      elite: 4
