--- a/backend/data/skills.yaml
+++ b/backend/data/skills.yaml
@@ -813,7 +813,7 @@ requirements:
     Logistics Cruisers:
       min: 4
       gold: 5
-    Magnetometric Sensor Compensation:
+    Gravimetric Sensor Compensation:
       elite: 4
     Caldari Cruiser:
       min: 5
@@ -869,7 +869,8 @@ requirements:
       min: 1
       elite: 5
     Cybernetics:
-      min: 5
+      min: 4
+      elite: 5
     Thermodynamics:
       min: 4
       elite: 5
