--- a/backend/data/skills.yaml
+++ b/backend/data/skills.yaml
@@ -860,7 +860,7 @@ requirements:
     Drone Durability:
       min: 1
     Shield Emission Systems:
-      min: 3
+      elite: 3
       gold: 4
     Remote Hull Repair Systems:
       min: 3
