[add] fit note for gila 1% implant

--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -34,4 +34,7 @@ notes:
   - name: Starter SCS Oneiros
     description: >
       This fit requires the RA-704, FC-804, EO-604 Implants
+  - name: Offensive SCS Gila
+    description: >
+      This fit requires the EE-601 Implant to fit everything
 
