[add] fit note for offensive

--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -21,7 +21,7 @@ notes:
       These are equivellant to starters and are ment as a easy refit from the Horde GOLDEN doctrine, same rules as starter fits apply.
   - name: Offensive
     description: >
-      \# **These fits are only to be used when a gila fleet is pinged. Don't mix them with regular armor fleet.**
+      # **These fits are only to be used when a gila fleet is pinged. Don't mix them with regular armor fleet.**
 
   # Ship specific notes
 
