[CHG] fit update

--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -31,6 +31,9 @@ notes:
   - name: Alt Rattlesnake Other
     description: >
       You need a badge to fly this ship or an FC special permission.
+  - name: Starter SCS Nightmare
+    description: >
+      If you can't use T2 turrent replace them with Tachyon Modulated Energy Beam I
   - name: Multibox Loki Other
     description: >
       This fit is only for multibox specialist
