--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -27,20 +27,20 @@ notes:
 
   - name: Optimal SCS Nestor
     description: >
-      This fit requires the RA-705 Implant & EM-805 Implant
+      This fit requires the RA-705 Implant & EM-805 Implant.
   - name: Alt Rattlesnake Other
     description: >
       You need a badge to fly this ship or an FC special permission.
   - name: Starter SCS Nightmare
     description: >
-      If you can't use T2 turrent replace them with Tachyon Modulated Energy Beam I
+      If you can't use T2 turrent replace them with Tachyon Modulated Energy Beam I.
   - name: Multibox Loki Other
     description: >
-      This fit is only for multibox specialist
+      This fit is only for multibox specialist.
   - name: Starter SCS Oneiros
     description: >
-      This fit requires the RA-704, FC-804, EO-604 Implants
+      This fit requires the RA-704, FC-804, EO-604 Implants.
   - name: Offensive SCS Gila
     description: >
-      This fit requires the EE-601 Implant to fit everything
+      This fit requires the EE-601 Implant if you use the fed navy AB.
 
