[add] gun spe skill for marauders

--- a/backend/data/skills.yaml
+++ b/backend/data/skills.yaml
@@ -668,6 +668,7 @@ requirements:
     Large Energy Turret:
       min: 5
     Large Pulse Laser Specialization:
+      min: 3
       elite: 4
       priority: 10
     Marauders:
@@ -716,6 +717,7 @@ requirements:
     Large Hybrid Turret:
       min: 5
     Large Blaster Specialization:
+      min: 3
       elite: 4
       priority: 10
     Marauders:
