--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -28,6 +28,9 @@ notes:
   - name: Optimal SCS Nestor
     description: >
       This fit requires the RA-705 Implant & EM-805 Implant.
+  - name: Standard SCS Guardian
+    description: >
+      This fit requires the mindflood running if you don't have logistic cruiser V.
   - name: Alt Rattlesnake Other
     description: >
       You need a badge to fly this ship or an FC special permission.
@@ -40,6 +43,7 @@ notes:
   - name: Starter SCS Oneiros
     description: >
       This fit requires the RA-704, FC-804, EO-604 Implants.
+      This fit requires the mindflood running if you don't have logistic cruiser V. 
   - name: Offensive SCS Gila
     description: >
       This fit requires the EE-601 Implant if you use the fed navy AB.
