[fix] missing gunnery in a class

--- a/backend/data/skills.yaml
+++ b/backend/data/skills.yaml
@@ -26,6 +26,7 @@ categories:
     - Large Pulse Laser Specialization
     - Large Hybrid Turret
     - Large Blaster Specialization
+    - Gunnery
   Missile:
     - Missile Launcher Operation
     - Rapid Launch
