[add] Golem, storm, loki fits and skills + display

--- a/backend/data/categories.yaml
+++ b/backend/data/categories.yaml
@@ -28,6 +28,8 @@ rules:
     category: logi
   - item: Basilisk
     category: logi
+  - item: Loki
+    category: logi
   # Bastion
   - item: Bastion Module I
     category: bastion
