--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -22,6 +22,9 @@ notes:
   - name: Offensive
     description: >
       # **These fits are only to be used when a gila fleet is pinged. Don't mix them with regular armor fleet.**
+  - name: shield_VG
+    description: >
+      # **These fits are only to be used when a Stormbringer fleet is pinged. Don't mix them with regular armor fleet.**
 
   # Ship specific notes
 
