--- a/backend/data/skills.yaml
+++ b/backend/data/skills.yaml
@@ -109,6 +109,12 @@ categories:
     - Caldari Battleship
     - Amarr Battlecruiser
     - Gallente Battlecruiser
+    - Minmatar Cruiser
+    - Minmatar Strategic Cruiser
+    - Minmatar Core Systems
+    - Minmatar Defensive Systems
+    - Minmatar Offensive Systems
+    - Minmatar Propulsion Systems
     - Amarr Cruiser
     - Gallente Cruiser
     - Caldari Cruiser
@@ -1146,3 +1152,87 @@ requirements:
       min: 5
     Shield Operation:
       min: 5
+
+  Golem:
+    Caldari Battleship:
+      min: 5
+    Marauders:
+      min: 4
+      elite: 5
+    Torpedoes:
+      min: 5
+    Torpedo Specialization:
+      min: 4
+      gold: 5
+    Target Management:
+      min: 4
+      elite: 5
+    Long Range Targeting:
+      min: 4
+      elite: 5
+    Signature Analysis:
+      min: 4
+      elite: 5
+    Shield Management:
+      min: 5
+    Shield Operation:
+      min: 5
+    Thermodynamics:
+      min: 4
+      elite: 5
+    Missile Launcher Operation:
+      min: 4
+      elite: 5
+    Rapid Launch:
+      min: 4
+      elite: 5
+    Missile Bombardment:
+      min: 4
+      elite: 5
+    Missile Projection:
+      min: 4
+      elite: 5
+    Target Navigation Prediction:
+      min: 4
+      elite: 5
+    Warhead Upgrades:
+      min: 4
+      elite: 5
+    Guided Missile Precision:
+      min: 4
+      elite: 5
+
+  Loki:
+    <<: [*generic_offensive, *logistics_offensive]
+    Evasive Maneuvering:
+      min: 3
+    Minmatar Cruiser:
+      min: 5
+    CPU Management:
+      min: 4
+    Energy Grid Upgrades:
+      min: 4
+    Capacitor Systems Operation:
+      min: 5
+    Tactical Shield Manipulation:
+      min: 4
+    Target Management:
+      min: 4
+      elite: 5
+    Advanced Target Management:
+      elite: 4
+    Long Range Targeting:
+      min: 4
+      elite: 5
+    Signature Analysis:
+      min: 4
+      elite: 5
+    Minmatar Core Systems:
+      min: 5
+    Minmatar Defensive Systems:
+      min: 5
+    Minmatar Offensive Systems:
+      min: 5
+    Minmatar Propulsion Systems:
+      min: 4
+      elite: 5
