[add] Starter option for Stormbringer

--- a/backend/data/fitnotes.yaml
+++ b/backend/data/fitnotes.yaml
@@ -56,5 +56,5 @@ notes:
       T2 gun can be used if you have the skills
   - name: Shield Stormbringer Elite
     description: >
-      This fit is compatible with elite skill level.
+      This fit is compatible with elite tank skill level .
 
