--- a/backend/data/skills.yaml
+++ b/backend/data/skills.yaml
@@ -967,6 +967,10 @@ requirements:
     Heavy Drone Operation:
       min: 4
       elite: 5
+    Sentry Drone Interfacing:
+      min: 1
+      elite: 3
+      gold: 5
     Leadership:
       min: 5
     Wing Command:
