[fix] meta modules and drones

--- a/backend/data/modules.yaml
+++ b/backend/data/modules.yaml
@@ -67,29 +67,36 @@ alternatives:
       - Dread Guristas Antimatter Charge L
 
   - - - Heavy Hull Maintenance Bot II
-  - - - Heavy Hull Maintenance Bot I
+    - - Heavy Hull Maintenance Bot I
+    - - Heavy Hull Maintenance Bot II
 
   - - - Medium Hull Maintenance Bot II
-  - - - Medium Hull Maintenance Bot I
+    - - Medium Hull Maintenance Bot I
+    - - Medium Hull Maintenance Bot II
 
   - - - Light Hull Maintenance Bot II
-  - - - Light Hull Maintenance Bot I
+    - - Light Hull Maintenance Bot I
+    - - Light Hull Maintenance Bot II
 
   - - - Small Tractor Beam II
-  - - - Small Tractor Beam I
+    - - Small Tractor Beam I
+    - - Small Tractor Beam II
 
   - - - Federation Navy Hobgoblin
-  - - - Hobgoblin II
+    - - Federation Navy Hobgoblin
+    - - Hobgoblin II
     - - "'Augmented' Hobgoblin"
       - Light Mutated Drone
 
   - - - Federation Navy Hammerhead
-  - - - Hammerhead II
+    - - Federation Navy Hammerhead
+    - - Hammerhead II
     - - "'Augmented' Hammerhead"
       - Medium Mutated Drone
 
   - - - Federation Navy Ogre
-  - - - Ogre II
+    - - Federation Navy Ogre
+    - - Ogre II
     - - "'Augmented' Ogre"
       - Heavy Mutated Drone
       
