[fix] meta modules and drones

--- a/backend/data/modules.yaml
+++ b/backend/data/modules.yaml
@@ -78,6 +78,7 @@ alternatives:
 
   - - - Federation Navy Ogre
     - - Ogre II
+    - - Federation Navy Ogre
     - - "'Augmented' Ogre"
       - Heavy Mutated Drone
       
