[fix] meta modules and drones

--- a/backend/data/modules.yaml
+++ b/backend/data/modules.yaml
@@ -66,13 +66,27 @@ alternatives:
     - - Guardian Antimatter Charge L
       - Dread Guristas Antimatter Charge L
 
+  - - - Heavy Hull Maintenance Bot II
+    - - Heavy Hull Maintenance Bot I
+    - - Heavy Hull Maintenance Bot II
+
+  - - - Medium Hull Maintenance Bot II
+    - - Medium Hull Maintenance Bot I
+    - - Medium Hull Maintenance Bot II
+
+  - - - Light Hull Maintenance Bot II
+    - - Light Hull Maintenance Bot I
+    - - Light Hull Maintenance Bot II
+
   - - - Federation Navy Hobgoblin
     - - Hobgoblin II
+    - - Federation Navy Hobgoblin
     - - "'Augmented' Hobgoblin"
       - Light Mutated Drone
 
   - - - Federation Navy Hammerhead
     - - Hammerhead II
+    - - Federation Navy Hammerhead
     - - "'Augmented' Hammerhead"
       - Medium Mutated Drone
 
