[add] meta module ishtar / eos

--- a/backend/data/modules.yaml
+++ b/backend/data/modules.yaml
@@ -66,6 +66,17 @@ alternatives:
     - - Guardian Antimatter Charge L
       - Dread Guristas Antimatter Charge L
 
+  - - - Remote Sensor Booster II
+    - - Shadow Serpentis Remote Sensor Booster
+    - - Shadow Serpentis Remote Tracking Computer
+    - - Remote Tracking Computer II
+    - - Remote Sensor Booster II
+
+  - - - Armor Command Burst II
+    - - Skirmish Command Burst II
+    - - Armor Command Burst II
+    - - Information Command Burst II
+
   - - - Federation Navy Hobgoblin
     - - Hobgoblin II
     - - Federation Navy Hobgoblin
