--- a/backend/data/modules.yaml
+++ b/backend/data/modules.yaml
@@ -108,12 +108,9 @@ from_meta:
   - base: Supratidal Entropic Disintegrator II
   - base: Imperial Navy Drone Damage Amplifier
   - base: Remote Tracking Computer II
-    alternative: Sentient Remote Sensor Booster
-    alternative: Shadow Serpentis Remote Sensor Booster
+    alternative: Remote Sensor Booster II
   - base: Remote Sensor Booster II
     alternative: Remote Tracking Computer II
-    alternative: Shadow Serpentis Remote Tracking Computer
-    alternative: Federation Navy Remote Tracking Computer
   - base: Dark Blood Capacitor Power Relay
   - base: Imperial Navy Cap Recharger
   - base: Large Inductive Compact Remote Capacitor Transmitter
